src/test/ui/closures/issue-81700-mut-borrow.stderr
error[E0596]: cannot borrow `bar` as mutable, as it is not declared as mutable
  --> $DIR/issue-81700-mut-borrow.rs:3:5
   |
LL |     let bar = || { foo(x); };
   |         ---            - calling `bar` requires mutable binding due to mutable borrow of `x`
   |         |
   |         help: consider changing this to be mutable: `mut bar`
LL |     bar();
   |     ^^^ cannot borrow as mutable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
