src/test/ui/closures/issue-81700-mut-borrow.rs
fn foo(x: &mut u32) {
    let bar = || { foo(x); };
    bar(); //~ ERROR cannot borrow
}
fn main() {}
